--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,23 @@
   "javascript.preferences.importModuleSpecifier": "relative",
   "javascript.preferences.importModuleSpecifierEnding": "js",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#a093a2",
-    "activityBar.background": "#a093a2",
+    "activityBar.activeBackground": "#55beef",
+    "activityBar.background": "#55beef",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#e7e1b7",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#a093a2",
-    "statusBar.background": "#88778b",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#a093a2",
-    "statusBarItem.remoteBackground": "#88778b",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#88778b",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#88778b99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "activityBarBadge.background": "#cc1391",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#55beef",
+    "statusBar.background": "#26aceb",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#1390cb",
+    "statusBarItem.remoteBackground": "#26aceb",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#26aceb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#26aceb99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#88778b",
+  "peacock.color": "#26aceb",
 }
